--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.a1027.weekendapp.MainActivity">
+    android:orientation="vertical">
+    <!--    -->
+    <Button
+        android:id="@+id/btJoin"
+        android:text="회원가입"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <!--    -->
+    <Button
+        android:id="@+id/btLogin"
+        android:text="로그인"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <!--  DB전체수  -->
+    <Button
+        android:id="@+id/btCount"
+        android:text="연락처전체수"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
-</RelativeLayout>
+    <Button
+        android:id="@+id/btList"
+        android:text="연락처목록"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <!--  DB조회  -->
+    <Button
+        android:id="@+id/btFind"
+        android:text="연락처조회"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <!--  DB수정  -->
+    <Button
+        android:id="@+id/btUpdate"
+        android:text="연락처수정"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <!--   DB삭제 -->
+    <Button
+        android:id="@+id/btDelete"
+        android:text="연락처삭제"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <!--  DB추가  -->
+    <Button
+        android:id="@+id/btAdd"
+        android:text="연락처추가"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <Button
+        android:id="@+id/btMap"
+        android:text="구글맵"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+</LinearLayout>
